--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,9 +1,12 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-html , body{
-    height: 100%;
+  }
+  
+  html, body {
+    min-height: 100vh;
     width: 100%;
-}
+    overflow-x: hidden;
+  }
+  
