--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,15 +1,24 @@
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
-}
-html , body{
-    height: 100%;
+  }
+  
+  html, body {
+    min-height: 100vh;
     width: 100%;
-    font-family: 'Blinker';
-}
+    overflow-x: hidden;
+    scroll-behavior: smooth;
+    font-family: 'Blinker', sans-serif;
+  }
+  
+  #root {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  }
+  
 :root {
     --bebas: 'Bebas Neue';
   }
