--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -72,4 +72,15 @@
     font-size: 0.8rem;
     color: #ccc;
   }
+  #authc{
+    display: flex;
+    height: 10vh;
+    margin-left: 1vw;
+  }
+  #authc:hover {
+    cursor: pointer;
+    transform: scale(1.1);
+    transition: transform 0.3s ease-in-out;
+  }
+  
   
