added engine page

--- a/frontend/src/components/ScamCard.css
+++ b/frontend/src/components/ScamCard.css
@@ -1,44 +1,43 @@
 .scam-card {
-    flex: 1;
-    background-color: #FFEFD7;
-    border: 6px solid #F9A825;
-    border-radius: 30px;
-    padding: 3rem;
-    font-family: 'Poppins', sans-serif;
-    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.07);
-    max-width: 30vw;
-  }
-  
-  .scam-content {
-    flex: 1;
-  }
-  
-  .scam-title {
-    display: flex;
-    align-items: center;
-    font-size: 1.1rem;
-    font-weight: 600;
-    color: #0d2a53;
-    margin-bottom: 1rem;
-  }
-  
-  .title-icon {
-    height: 4vh;
-    margin-right: 0.6rem;
-  }
-  
-  .scam-divider {
-    border: none;
-    border-top: 1px solid #333;
-    margin: 0.2rem 0 1.2rem;
-    opacity: 0.5;
-  }
-  
-  .scam-points {
-    list-style: disc;
-    padding-left: 1.2rem;
-    font-size: 0.9rem;
-    color: #222;
-    line-height: 1.6;
-  }
-  
+  flex: 1;
+  background-color: #ffefd7;
+  border: 6px solid #f9a825;
+  border-radius: 30px;
+  padding: 3rem;
+  font-family: 'Poppins', sans-serif;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.07);
+  max-width: 30vw;
+}
+
+.scam-content {
+  flex: 1;
+}
+
+.scam-title {
+  display: flex;
+  align-items: center;
+  font-size: 1.1rem;
+  font-weight: 600;
+  color: #0d2a53;
+  margin-bottom: 1rem;
+}
+
+.title-icon {
+  height: 4vh;
+  margin-right: 0.6rem;
+}
+
+.scam-divider {
+  border: none;
+  border-top: 1px solid #333;
+  margin: 0.2rem 0 1.2rem;
+  opacity: 0.5;
+}
+
+.scam-points {
+  list-style: disc;
+  padding-left: 1.2rem;
+  font-size: 0.9rem;
+  color: #222;
+  line-height: 1.6;
+}
