--- a/frontend/src/components/CardItem.css
+++ b/frontend/src/components/CardItem.css
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  padding: 1rem 1rem;
+  padding: 0.5rem 1rem;
   background-color: white;
   border-radius: 12px;
   transition: transform 0.3s ease;
@@ -34,4 +34,13 @@
 .card-texts {
   display: flex;
   flex-direction: column;
+}
+@media (max-width: 1024px) {
+  .card-item {
+    padding: 0.5rem 0rem;
+    background-color: white;
+    border-radius: 12px;
+    transition: transform 0.3s ease;
+    gap: 0rem;
+  }
 }
