--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -189,7 +189,12 @@ body {
     padding: 4vh 4vw;
     gap: 3vh;
   }
-
+  #frm{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
   #hm-left,
   #hm-right {
     width: 100%;
