--- a/frontend/src/components/ServiceCard.css
+++ b/frontend/src/components/ServiceCard.css
@@ -34,3 +34,43 @@
   color: #333;
   margin-bottom: 0.8vh;
 }
+@media (max-width: 768px) {
+  .service-card {
+    gap: 1vmax;
+  }
+  
+  .service-icon img {
+    width: 5vmax;
+    height: 5vmax;
+  }
+  
+  .service-title {
+    font-size: 2.2vmax;
+    margin-bottom: 1vh;
+  }
+  
+  .service-point {
+    font-size: 1.5vmax;
+    margin-bottom: 0.8vh;
+  }
+}
+@media (max-width: 470px) {
+  .service-card {
+    gap: 1vmax;
+  }
+  
+  .service-icon img {
+    width: 6vmax;
+    height: 6vmax;
+  }
+  
+  .service-title {
+    font-size: 2.7vmax;
+    margin-bottom: 1vh;
+  }
+  
+  .service-point {
+    font-size: 2.1vmax;
+    margin-bottom: 0.8vh;
+  }
+}
