--- a/frontend/src/components/TestimonialCard.css
+++ b/frontend/src/components/TestimonialCard.css
@@ -47,3 +47,15 @@
   min-width: 70px;
   max-width: 100px;
 }
+@media (max-width: 690px) {
+  .testimonial-card {
+    background-color: #ffeccd;
+    padding: 1.5rem;
+    border-radius: 1.25rem;
+    width: 80%;
+    max-width: 100vw;
+    width: 85vw;
+    position: relative;
+    box-shadow: 0 0.3rem 0.75rem rgba(0, 0, 0, 0.1);
+  }
+}
