--- a/frontend/src/pages/Transmission.css
+++ b/frontend/src/pages/Transmission.css
@@ -117,10 +117,11 @@
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
   }
   
-  #transmission-sb {
+  #transmission-sbh {
     color: #fff;
     font-size: 2.5vh;
     font-weight: 300;
+    font-family: 'Blinker';
   }
   
   #transmission-btn {
@@ -186,7 +187,38 @@
       margin: 2vh auto;
     }
   }
+  @media (max-width: 925px) {
+    #transmission1 {
+      flex-direction: column;
+      height: auto;
+      padding: 4vh 4vw;
+      gap: 3vh;
+    }
+    #transmission-sbh {
+      color: #fff;
+      font-size: 1rem;
+      
+    }
+    #transmission-left,
+    #transmission-right {
+      width: 100%;
+      text-align: center;
+    }
   
+    #transmission-head {
+      font-size: 3vh;
+    }
+  
+    #transmission-sb {
+      font-size: 2vh;
+    }
+  
+    #transmission-btn {
+      font-size: 2vh;
+      margin: 2vh auto;
+      padding: 1vh 3.5vw;
+    }
+  }
   @media (max-width: 768px) {
     #transmission {
       flex-direction: column;
