--- a/frontend/src/components/Form.css
+++ b/frontend/src/components/Form.css
@@ -52,6 +52,50 @@
   display: flex;
   flex-direction: column;
 }
+.dropdown {
+  position: absolute;
+  top: 40px;
+  left: 0;
+  width: 100%;
+  max-height: 200px;
+  overflow-y: auto;
+  border: 1px solid #ccc;
+  background: #fff;
+  color: #000;
+  z-index: 9999;
+}
+
+.dropdown-item {
+  padding: 8px;
+  cursor: pointer;
+}
+
+.dropdown-item:hover {
+  background: #f0f0f0;
+}
+.custom-form select {
+  padding: 0.8vh 1vw;
+  border-radius: 6px;
+  border: none;
+  outline: none;
+  font-size: 0.95rem;
+  background: rgba(255, 255, 255, 0.3);
+  color: black;
+  width: 100%;
+  backdrop-filter: blur(5px);
+  appearance: none; /* Remove native dropdown arrow */
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
+/* Optional: Add a custom dropdown arrow */
+.custom-form select {
+  background-image: url('data:image/svg+xml;utf8,<svg fill="white" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M7 10l5 5 5-5z"/></svg>');
+  background-repeat: no-repeat;
+  background-position: right 0.7vw center;
+  background-size: 1rem;
+  padding-right: 2rem;
+}
 
 .custom-form button {
   margin-top: 1vh;
